--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,6 +1,6 @@
-name: Your Name
-studentNumber: z1234567
-officialEmail: noIdea@unsw.edu.au
-contactEmail:
-  firstBit: firstName.Lastname  # this avoids spam, the @ is implied
-  otherBit: whereIwork.com
+name: Tom Rowe
+studentNumber: z5246739
+officialEmail: z5246739@ad.unsw.edu.au
+contactEmail: tomrowingboat@gmail.com
+  firstBit: tomrowingboat  # this avoids spam, the @ is implied
+  otherBit: gmail.com
