--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -2,5 +2,5 @@ name: Tom Rowe
 studentNumber: z5246739
 officialEmail: z5246739@ad.unsw.edu.au
 contactEmail:
-  firstBit: tomrowingboat  # this avoids spam, the @ is implied
+  firstBit: tomrowingboat  # this avoids spam, the @ is impliedk
   otherBit: gmail.com
